# save_url

./: .gitignore  README.md  pyproject.toml  save_url  save_url.epj
save_url/: __init__.py  core.py  poethepoet.py
save_url/locale/: es.po  save_url.pot
save_url/locale/es/LC_MESSAGES/: save_url.mo
