[tool.poetry]
name = "save-url"
version = "0.7.0"
description = "Script to save and url in a single file with an automatic and structured name. It uses monolith as its backend"
authors = ["turulomio <turulomio@yahoo.es>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
mechanize = "^0.4.8"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
save_url = "save_url.core:console_save_url"

[tool.poe.tasks]
release = { script = "save_url.poethepoet:release" }
translate = { script = "save_url.poethepoet:translate" }
monolith_ebuild = { script = "save_url.poethepoet:monolith_ebuild" }

[project.urls]
homepage = "https://github.com/turulomio/save_url/"
repository = "https://github.com/turulomio/save_url/"
changelog = "https://github.com/turulomio/save_url#changelog"
